Refactor the public http error to use a enum for the error type
