# api/swagger.yml
@@ -801,10 +801,24 @@ definitions:
         type: string
         example: Forbidden
       type:
-        description: Type of error returned, should be used for client-side error
-          handling
-        type: string
-        example: generic
+        $ref: '#/definitions/publicHttpErrorType'
+  publicHttpErrorType:
+    description: Type of error returned, should be used for client-side error handling
+    type: string
+    enum:
+    - generic
+    - PUSH_TOKEN_ALREADY_EXISTS
+    - OLD_PUSH_TOKEN_NOT_FOUND
+    - ZERO_FILE_SIZE
+    - USER_DEACTIVATED
+    - INVALID_PASSWORD
+    - NOT_LOCAL_USER
+    - TOKEN_NOT_FOUND
+    - TOKEN_EXPIRED
+    - USER_ALREADY_EXISTS
+    - MALFORMED_TOKEN
+    - LAST_AUTHENTICATED_AT_EXCEEDED
+    - MISSING_SCOPES
   publicHttpValidationError:
     type: object
     required:
