# internal/api/httperrors/common.go
@@ -1,7 +1,11 @@
 package httperrors
 
-import "net/http"
+import (
+	"net/http"
+
+	"allaboutapps.dev/aw/go-starter/internal/types"
+)
 
 var (
-	ErrBadRequestZeroFileSize = NewHTTPError(http.StatusBadRequest, "ZERO_FILE_SIZE", "File size of 0 is not supported.")
+	ErrBadRequestZeroFileSize = NewHTTPError(http.StatusBadRequest, types.PublicHTTPErrorTypeZEROFILESIZE, "File size of 0 is not supported.")
 )
